--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.36.1",
     "react-markdown": "^8.0.3",
     "swiper": "^8.4.2",
