--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.27.2",
     "contentful": "^9.2.4",
+    "firebase": "^9.12.1",
     "nanoid": "^4.0.0",
     "next": "12.3.0",
     "react": "18.2.0",
