--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "contentful": "^9.2.4",
     "firebase": "^9.12.1",
+    "gsap": "^3.11.3",
     "nanoid": "^4.0.0",
     "next": "12.3.0",
     "react": "18.2.0",
