--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,14 +25,11 @@ jobs:
         run: |
           npm install 
           npm run build
-      - name: Install Python 3.9
-        uses: actions/setup-python@v2
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v20
         with:
-          python-version: 3.9
-      - name: Install EB CLI using pip
-        run: |
-          python -m pip install --upgrade pip
-          pip install awsebcli
-      - name: Deploy to Elastic Beanstalk
-        run: |
-          eb deploy
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: web-frontend
+          environment_name: web-frontend-startupcampus-env
+          region: ap-southeast-1
