changing cd behaviour

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,18 @@ jobs:
         run: |
           npm install 
           npm run build
+      - name: Get timestamp
+        uses: gerred/actions/current-time@master
+        id: current-time
+
+      - name: Run string replace
+        uses: frabert/replace-string-action@master
+        id: format-time
+        with:
+          pattern: '[:\.]+'
+          string: "${{ steps.current-time.outputs.time }}"
+          replace-with: '-'
+          flags: 'g'
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v20
         with:
@@ -33,3 +45,4 @@ jobs:
           application_name: web-frontend
           environment_name: web-frontend-startupcampus-env
           region: ap-southeast-1
+          version_label: "frontend-webapp-startupcampus-${{ steps.format-time.outputs.replaced }}"
