--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,24 +25,14 @@ jobs:
         run: |
           npm install 
           npm run build
-      - name: Get timestamp
-        uses: gerred/actions/current-time@master
-        id: current-time
-
-      - name: Run string replace
-        uses: frabert/replace-string-action@master
-        id: format-time
+      - name: Install Python 3.9
+        uses: actions/setup-python@v2
         with:
-          pattern: '[:\.]+'
-          string: "${{ steps.current-time.outputs.time }}"
-          replace-with: '-'
-          flags: 'g'
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v20
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: web-frontend
-          environment_name: web-frontend-startupcampus-env
-          region: ap-southeast-1
-          version_label: "frontend-webapp-startupcampus-${{ steps.format-time.outputs.replaced }}"
+          python-version: 3.9
+      - name: Install EB CLI using pip
+        run: |
+          python -m pip install --upgrade pip
+          pip install awsebcli
+      - name: Deploy to Elastic Beanstalk
+        run: |
+          eb deploy
