Menambahkan form beasiswa gcc

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.36.1",
     "react-markdown": "^8.0.3",
+    "react-use": "^17.4.0",
     "sweetalert2": "^11.6.3",
     "sweetalert2-react-content": "^5.0.5",
     "swiper": "^8.4.2",
