Mengubah page google ux menjadi sesuai figma

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "contentful": "^9.2.4",
     "firebase": "^9.12.1",
     "gsap": "^3.11.3",
+    "html-react-parser": "^3.0.6",
     "nanoid": "^4.0.0",
     "next": "12.3.0",
     "react": "18.2.0",
@@ -27,6 +28,7 @@
     "react-hook-form": "^7.36.1",
     "react-markdown": "^8.0.3",
     "react-use": "^17.4.0",
+    "sanitize-html": "^2.8.1",
     "sweetalert2": "^11.6.3",
     "sweetalert2-react-content": "^5.0.5",
     "swiper": "^8.4.2",
