--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p $PORT",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -18,6 +19,7 @@
     "axios": "^0.27.2",
     "contentful": "^9.2.4",
     "firebase": "^9.12.1",
+    "form-data": "^4.0.0",
     "gsap": "^3.11.3",
     "html-react-parser": "^3.0.6",
     "nanoid": "^4.0.0",
